Initial webview-based GUI

--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,7 @@ install_requires =
     requests
     toml
     xattr
+    pywebview
 
 setup_requires =
     wheel
@@ -33,6 +34,12 @@ setup_requires =
 
 tests_require =
      pytest
+
+[options.extras_require]
+gtk =
+    pywebview[gtk]
+qt =
+    pywebview[qt]
 
 [options.packages.find]
 exclude=testmod
